--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -6,6 +6,6 @@
 		<title>{{ title }}</title>
 	</head>
 	<body>
-		{% block content %}{% endblock %}
+		<main tabindex="-1" id="main-content">{% block content %}{% endblock %}</main>
 	</body>
 </html>
