adjusted dir and file names

--- a/src/_includes/partials/tweets.njk
+++ b/src/_includes/partials/tweets.njk
@@ -1,7 +1,7 @@
 ---
-permalink: "tweets/index.html"
-layout: 'layouts/tweets.html'
-title: "All Tweets"
+permalink: "tweets/home.html"
+layout: 'layouts/home.html'
+title: 'all single tweets'
 ---
 
 {# mk an orphan tweet page pulling data from json file #}
