fine-tuning dir structr

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -1,4 +1,10 @@
+---
+permalink: 'tav/home.html'
+---
+{# this is the home page skeleton for the _twitter archive viewer_ home page. #}
+
 {% extends "layouts/base.html" %}
+
 {% block content %}
     <h1>{{ title }}</h1>
     {{ content | safe }}
