--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -1,11 +1,6 @@
----
-permalink: 'tav/home.html'
----
-{# this is the home page skeleton for the _twitter archive viewer_ home page. #}
-
+{# home page for _twitter archive viewer_ #}
 {% extends "layouts/base.html" %}
-
 {% block content %}
-    <h1>{{ title }}</h1>
-    {{ content | safe }}
+   <h1>{{ title }}</h1>
+   {{ content | safe }}
 {% endblock %}
