adds basic styling structr

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{{ title }}</title>
 		<link rel="stylesheet" media="all" href="https://use.typekit.net/oym8nvz.css" />
-		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="/css/uva.css">
+		<link rel="stylesheet" href="/css/styles.css">
 	</head>
 	<body>
 		<main tabindex="-1" id="main-content">{% block content %}{% endblock %}</main>
