--- a/src/_includes/partials/twSingle.njk
+++ b/src/_includes/partials/twSingle.njk
@@ -3,5 +3,21 @@
 
 {% block content %}
     <p>this comes from the `/partials/twSingle.njk`</p>
-    <p>if this works the tweet's id should display here: {{ tw or "not found" }} </p>
+
+    <article class="tweet">
+    <div class="tw-head">
+        <span class="user_name">@{{ users[tweets[tw].user_id].screen_name }}</span> 
+        <span><a href="json-id012345678.html">JSON</a></span>
+        <span class="user_id">{{ tweets[tw].user_id }}</span>
+    </div>
+    <div>
+        <p class="tw_text">{{ tweets[tw].text }}</p>
+    </div>
+    <div class="tw_bottom">
+        <p>{{ tweets[tw].created_at }}</p>
+        <p>{{ tweets[tw].favorite_count }}</p>
+        <p>{{ tweets[tw].retweet_count }}</p>
+        <p>Replies</p>
+    </div>
+</article>
 {% endblock %}
