core srch elements

--- a/src/_includes/partials/twSingle.njk
+++ b/src/_includes/partials/twSingle.njk
@@ -1,5 +1,5 @@
 
-{# mk a single page for each tweet. this view expands metadata display  #}
+{# this template makes a single page for each tweet. this view expands metadata fields displayed #}
 
 {% block content %}
     <p>this comes from the `/partials/twSingle.njk`</p>
