--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,11 @@
-.container {
+.container--col-view {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.container--grid-view {
+    display: flex;
 }
 
 .tweet {
@@ -10,5 +14,4 @@
     padding: .5em;
     border-radius: 1em;
     background-color: rgb(182, 152, 230);
-
 }   
