--- a/src/_includes/partials/twSearch.njk
+++ b/src/_includes/partials/twSearch.njk
@@ -8,5 +8,5 @@
     </div>
 
 <script src="https://unpkg.com/lunr/lunr.js"></script>
-<script src="/search.js"></script>
+<script src="_data/tw-search.js"></script>
 {% endblock %}
