--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -7,8 +7,11 @@
 		<link rel="stylesheet" media="all" href="https://use.typekit.net/oym8nvz.css" />
 		<link rel="stylesheet" href="/css/uva.css">
 		<link rel="stylesheet" href="/css/styles.css">
+		<script src="https://unpkg.com/lunr/lunr.js"></script>
 	</head>
 	<body>
 		<main tabindex="-1" id="main-content">{% block content %}{% endblock %}</main>
+
+		<!-- here's where the other search.js goes -->
 	</body>
 </html>
