move search js to separate directory

--- a/src/_includes/partials/search.njk
+++ b/src/_includes/partials/search.njk
@@ -6,5 +6,5 @@
 <!-- Results will appear here -->
 <div id="results"></div>
 <script src="https://unpkg.com/lunr/lunr.js"></script>
-<script src="/_data/tw-search.js"></script>
+<script src="/js/tw-search.js"></script>
 {% endblock %}
