search kinda works

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="/css/uva.css">
 		<link rel="stylesheet" href="/css/styles.css">
 		<script src="https://unpkg.com/lunr/lunr.js"></script>
+		<script src="/js/tw-search.js"></script>
 	</head>
 	<body>
 		<main tabindex="-1" id="main-content">{% block content %}{% endblock %}</main>
